# See: <https://doc.rust-lang.org/cargo/reference/manifest.html>
[package]
name = "rustable"
version = "0.1.0"
edition = "2024"
authors = ["Micah Kepe <micahkepe@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
unicode-width = "0.2.2"
termcolor = { version = "1.4.1" }

[lints.clippy]
# See: <https://rust-lang.github.io/rust-clippy/master/index.html.
all = { level = "warn" }
pedantic = { level = "warn" }
nursery = { level = "warn" }

